--- a/FullApp3/Modules/FullApp3.Modules.ModuleName/Views/EditTimeCard.xaml
+++ b/FullApp3/Modules/FullApp3.Modules.ModuleName/Views/EditTimeCard.xaml
@@ -1,7 +1,7 @@
-﻿<UserControl x:Class="FullApp3.Modules.ModuleName.Views.ViewA"
+﻿<UserControl x:Class="FullApp3.Modules.TimeCard.Views.EditTimeCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FullApp3.Modules.ModuleName.Views"
+             xmlns:local="clr-namespace:FullApp3.Modules.TimeCard.Views"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True" >
     <Grid>
