--- a/FullApp3/Modules/FullApp3.Modules.ModuleName/Views/EditTimeCard.xaml
+++ b/FullApp3/Modules/FullApp3.Modules.ModuleName/Views/EditTimeCard.xaml
@@ -2,12 +2,70 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FullApp3.Modules.TimeCard.Views"
-             xmlns:prism="http://prismlibrary.com/"
-             prism:ViewModelLocator.AutoWireViewModel="True" >
+             xmlns:prism="http://prismlibrary.com/" xmlns:conv="clr-namespace:FullApp3.Modules.TimeCard.Converter" xmlns:vm="clr-namespace:FullApp3.Modules.TimeCard.ViewModels"
+             prism:ViewModelLocator.AutoWireViewModel="True">
+
+    <UserControl.Resources>
+        <conv:EqualityConverter x:Key="EqualityConverter"/>
+    </UserControl.Resources>
     <Grid>
-        <TextBlock Text="{Binding Message}"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Row="0" Grid.Column="0"  Margin="30" >
+            <Calendar HorizontalAlignment="Left" Margin="20" VerticalAlignment="Top"
+                  SelectedDate="{Binding SelectedWorkDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                  Width="212" Height="175" FontSize="24" RenderTransformOrigin="0.5,0.5">
+                <Calendar.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Calendar.RenderTransform>
+            </Calendar>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Grid.Column="0"  Margin="10">
+            <StackPanel Orientation="Horizontal">
+                <Label Content="勤務区分" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Center"/>
+                <RadioButton Content="在宅" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Center"
+                     IsChecked="{Binding WorkType, Converter={StaticResource EqualityConverter}, ConverterParameter='在宅'}"/>
+                <RadioButton Content="出社" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Center"
+                     IsChecked="{Binding WorkType, Converter={StaticResource EqualityConverter}, ConverterParameter='出社'}"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="開始時間" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Top" />
+                <ComboBox HorizontalAlignment="Left" Margin="10" VerticalAlignment="Top" Width="120"
+                  ItemsSource="{Binding StartTimeOptions}" SelectedItem="{Binding SelectedStartTime}"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="休憩時間" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Top"/>
+                <ComboBox HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Top" Width="120"
+                  ItemsSource="{Binding BreakTimeOptions}"
+                  SelectedItem="{Binding SelectedBreakTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="終了時間" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Top" />
+                <ComboBox HorizontalAlignment="Left" Margin="10" VerticalAlignment="Top" Width="120"
+                  ItemsSource="{Binding EndTimeOptions}"
+                  SelectedItem="{Binding SelectedEndTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Grid.Row="0" Grid.Column="1" >
+            <TextBlock Text="{Binding Message}"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    FontSize="24"/>
+            <TextBox HorizontalAlignment="Center" Margin="10" TextWrapping="Wrap" Text="{Binding StartText}" VerticalAlignment="Top" Width="272" Height="172"/>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Grid.Column="1" Margin="1">
+            <TextBox HorizontalAlignment="Center" Margin="10" TextWrapping="Wrap" Text="{Binding EndText}" VerticalAlignment="Top" Width="271" Height="172"/>
+        </StackPanel>
     </Grid>
 </UserControl>
