--- a/FullApp3/FullApp3/Views/MainWindow.xaml
+++ b/FullApp3/FullApp3/Views/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:core="clr-namespace:FullApp3.Core;assembly=FullApp3.Core"
         Title="{Binding Title}" Height="600" Width="700" FontSize="16" >
     <Grid>
-        <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ContentRegion}" />
+        <Button Content="タイムカード入力" 
+                Command="{Binding NavigateToTimeCardCommand}"
+                Margin="10"
+                Padding="10,5"/>
     </Grid>
 </Window>
